# toys

./: .gitignore  README.md
ai/columnencoder/: encoder.py
ai/positionalencoder/: toys.py
ai/qlearning/: README.md  eg_qlearning.py  rl_tensorforce.py
ai/umap/: umap_simple.py
cmake_example/: CMakeLists.txt  main.cpp
cmake_example/src/: print_large.cpp
cmake_example/toylibs/: CMakeLists.txt
cmake_example/toylibs/include/: print.h  print_large.h
cmake_example/toylibs/lib/: libprint.dylib
cmake_example/toylibs/src/: print.cpp
quicksort_example/: quicksort.py  quicksort_time.py
rate_example/: rate  rate.cpp
readfile_example/: a.out  main.cpp  test.txt
scrapy_example/: douban_top250.py  gushiwen_content_more.py  movie.json  sons.json
substr_example/: CMakeCache.txt  a.out  main.cpp
tax_calc/: CMakeLists.txt  main.cpp
tax_calc/include/: tax.h
tax_calc/src/: tax.cpp
